add styles.css and basic character sheet

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The One Ring Character Creator</title>
+
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
 
@@ -30,6 +32,22 @@
         </select>
     </div>
 
+    <div id="culturebox">
+        <br>
+        <label for="proficiencies">Proficiencies</label> <br>
+        <select id="proficiencySelection1">
+            <option value="bows">Bows</option>
+            <option value="swords">Swords</option>
+        </select>
+        <br>
+        <select id="proficiencySelection1">
+            <option value="bows">Bows</option>
+            <option value="swords">Swords</option>
+            <option value="axes">Axes</option>
+            <option value="spears">Spears</option>
+        </select>
+    </div>
+
     <br>
 
     <div>
@@ -44,7 +62,31 @@
         </select>
     </div>
 
-    
+    <hr>
+    <h1>Character Sheet</h1>
+
+    <h2>General Info</h2>
+    <p>Name: </p>
+    <p>Age: </p>
+    <p>Heroic Culture: </p>
+    <p>Cultural Blessing: </p>
+    <p>Calling: </p>
+    <p>Shadow Path: </p>
+
+    <h2>Strength</h2>
+    <p>Strength Rating: </p>
+    <p>Strength TN: </p>
+    <p>Endurance: </p>
+
+    <h2>Heart</h2>
+    <p>Heart Rating: </p>
+    <p>Heart TN: </p>
+    <p>Hope: </p>
+
+    <h2>Wits</h2>
+    <p>Wits Rating: </p>
+    <p>Wits TN: </p>
+    <p>Parry: </p>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/index.js"></script>
