add distinctive features

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <p id="flawText">Cultural Flaw: </p>
     <p id="callingText">Calling: </p>
     <p id="shadowPathText">Shadow Path: </p>
+    <p id="distinctiveFeatureText">Distinctive Features: </p>
 
     <h2>Strength</h2>
     <p>Strength Rating: </p>
