add previous experience UI

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <h1>The One Ring 2e Character Creator</h1>
 
     <div>
         <form>
@@ -30,6 +31,21 @@
         </select>
     </div>
     <div id="culturebox">
+        <label for="Attribute Selection">Attribute Selection</label> <br>
+        <select id="attributeSelection">
+            <option value="att1">Str: 5, Heart: 7, Wits: 2</option>
+            <option value="att2">Str: 4, Heart: 7, Wits: 3</option>
+            <option value="att3">Str: 5, Heart: 6, Wits: 3</option>
+            <option value="att4">Str: 4, Heart: 6, Wits: 4</option>
+            <option value="att5">Str: 5, Heart: 5, Wits: 4</option>
+            <option value="att6">Str: 6, Heart: 6, Wits: 2</option>
+        </select>
+        <br>
+        <label for="Favored Skill">Favored Skill</label> <br>
+        <select id="favoredSkillSelection">
+            <option value="skill1">Athletics</option>
+            <option value="skill2">Enhearten</option>
+        </select>
         <br>
         <label for="proficiencies">Proficiencies</label> <br>
         <select id="proficiencySelection1">
@@ -55,6 +71,32 @@
             <option value="Treasure Hunter">Treasure Hunter</option>
             <option value="Warden">Warden</option>
         </select>
+    </div>
+    <br>
+    <div id="experiencebox">
+        <label for="previous experience">Previous Experience</label><br>
+        <label for="skills"><em>Skills</em></label> <br>
+        <div class="experiencechoicecontainer">
+            <label for="athletics-experience">Athletics</label>
+            <div class="experiencechoice">
+                <label for="athletics-1">1</label>
+                <input type="radio" id="html" name="athletics-experience" value="1">
+            </div>
+            <div class="experiencechoice">
+                <label for="athletics-1">2</label>
+                <input type="radio" id="html" name="athletics-experience" value="1">
+            </div>
+        </div>
+
+        
+    </div>
+    <div id="gearbox">
+        <label for="Attribute Selection">Weapon 1</label> <br>
+        <select id="attributeSelection">
+            <option value="att1">Str: 5, Heart: 7, Wits: 2</option>
+            <option value="att2">Str: 4, Heart: 7, Wits: 3</option>
+        </select>
+        <br>
     </div>
     <br>
     <button id="genCharButton">Generate Character Sheet</button>
