add war gear, armour, helm, shield, rewards and virtues UI functionality

--- a/index.html
+++ b/index.html
@@ -534,33 +534,33 @@
     <div id="gearbox">
         <label for="Weapon Selection 1">Weapon 1</label> <br>
         <select id="weapon1Selection">
-            <option value="bow">Bow</option>
-            <option value="greatbow">Great Bow</option>
+            <option value="Bow">Bow</option>
+            <option value="Great Bow">Great Bow</option>
         </select>
         <br>
         <label for="Weapon Selection 2">Weapon 2</label> <br>
         <select id="weapon2Selection">
-            <option value="shortsword">Short Sword</option>
-            <option value="sword">Sword</option>
-            <option value="longsword">Long Sword</option>
+            <option value="Short Sword">Short Sword</option>
+            <option value="Sword">Sword</option>
+            <option value="Long Sword">Long Sword</option>
         </select>
         <br>
         <label for="Armour Selection">Armour</label> <br>
-        <select id="armourselection">
-            <option value="leathershirt">Leather Shirt</option>
-            <option value="leathercorslet">Leather Corslet</option>
-            <option value="mailshirt">Mail-shirt</option>
-            <option value="mailcoat">Coat of Mail</option>
+        <select id="armourSelection">
+            <option value="Leather Shirt">Leather Shirt</option>
+            <option value="Leather Corslet">Leather Corslet</option>
+            <option value="Mail-shirt">Mail-shirt</option>
+            <option value="Coat of Mail">Coat of Mail</option>
         </select>
         <br>
         <label for="Helm Toggle">Use Helm?</label> <br>
         <input type="checkbox" name="usehelm" id="usehelm">
         <br>
         <label for="Shield Selection">Shield</label> <br>
-        <select id="shieldselection">
-            <option value="buckler">Buckler</option>
-            <option value="shield">Shield</option>
-            <option value="greatshield">Great Shield</option>
+        <select id="shieldSelection">
+            <option value="Buckler">Buckler</option>
+            <option value="Shield">Shield</option>
+            <option value="Great Shield">Great Shield</option>
         </select>
         <br>
     </div>
@@ -702,7 +702,7 @@
     <p id="swords-levelText">Swords: </p>
 
     <h2>War Gear</h2>
-    <ul id="warGearText"> 
+    <ul id="warGearList"> 
     </ul>
 
     <h2>Armour</h2>
@@ -712,12 +712,12 @@
 
     <h2>Rewards</h2>
     <p>Valour: 1</p>
-    <ul id="rewards"> 
+    <ul id="rewardsList"> 
     </ul>
 
     <h2>Virtues</h2>
     <p>Wisdom: 1</p>
-    <ul id="virtues"> 
+    <ul id="virtuesList"> 
     </ul>
     
 
