make armour and shield choices change based on culture

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <br>
     <div id="experiencebox">
     </div>
+    <br>
     <div id="gearbox">
     </div>
     <br>
@@ -78,7 +79,8 @@
     <button id="genCharButton">Generate Character Sheet</button>
 
     <hr>
-
+    
+    <!-- CHARACTER SHEET -->
     <h1>Character Sheet</h1>
 
     <h2>General Info</h2>
