add distinctive features UI and functionality

--- a/public/heroic-cultures/breeMan.html
+++ b/public/heroic-cultures/breeMan.html
@@ -25,3 +25,25 @@
     <option value="swords">Swords</option>
     <option value="spears">Spears</option>
 </select>
+<br>
+<label for="Distinctive Features">Distinctive Features</label> <br>
+<select id="distinctiveFeature1">
+    <option value="Cunning">Cunning</option>
+    <option value="Fair-spoken">Fair-spoken</option>
+    <option value="Faithful">Faithful</option>
+    <option value="Generous">Generous</option>
+    <option value="Insquisitive">Insquisitive</option>
+    <option value="Patient">Patient</option>
+    <option value="Rustic">Rustic</option>
+    <option value="True-hearted">True-hearted</option>
+</select>
+<br>
+<select id="distinctiveFeature2">
+    <option value="Fair-spoken">Fair-spoken</option>
+    <option value="Faithful">Faithful</option>
+    <option value="Generous">Generous</option>
+    <option value="Insquisitive">Insquisitive</option>
+    <option value="Patient">Patient</option>
+    <option value="Rustic">Rustic</option>
+    <option value="True-hearted">True-hearted</option>
+</select>
