--- a/public/heroic-cultures/dwarf.html
+++ b/public/heroic-cultures/dwarf.html
@@ -25,3 +25,25 @@
     <option value="swords">Swords</option>
     <option value="spears">Spears</option>
 </select>
+<br>
+<label for="Distinctive Features">Distinctive Features</label> <br>
+<select id="distinctiveFeature1">
+    <option value="Cunning">Cunning</option>
+    <option value="Fierce">Fierce</option>
+    <option value="Lordly">Lordly</option>
+    <option value="Proud">Proud</option>
+    <option value="Secretive">Secretive</option>
+    <option value="Stern">Stern</option>
+    <option value="Wary">Wary</option>
+    <option value="Wilful">Wilful</option>
+</select>
+<br>
+<select id="distinctiveFeature2">
+    <option value="Fierce">Fierce</option>
+    <option value="Lordly">Lordly</option>
+    <option value="Proud">Proud</option>
+    <option value="Secretive">Secretive</option>
+    <option value="Stern">Stern</option>
+    <option value="Wary">Wary</option>
+    <option value="Wilful">Wilful</option>
+</select>
