--- a/public/heroic-cultures/hobbit.html
+++ b/public/heroic-cultures/hobbit.html
@@ -25,3 +25,25 @@
     <option value="axes">Axes</option>
     <option value="spears">Spears</option>
 </select>
+<br>
+<label for="Distinctive Features">Distinctive Features</label> <br>
+<select id="distinctiveFeature1">
+    <option value="Eager">Eager</option>
+    <option value="Fair-spoken">Fair-spoken</option>
+    <option value="Faithful">Faithful</option>
+    <option value="Honourable">Honourable</option>
+    <option value="Insquisitive">Insquisitive</option>
+    <option value="Keen-eyed">Keen-eyed</option>
+    <option value="Merry">Merry</option>
+    <option value="Rustic">Rustic</option>
+</select>
+<br>
+<select id="distinctiveFeature2">
+    <option value="Fair-spoken">Fair-spoken</option>
+    <option value="Faithful">Faithful</option>
+    <option value="Honourable">Honourable</option>
+    <option value="Insquisitive">Insquisitive</option>
+    <option value="Keen-eyed">Keen-eyed</option>
+    <option value="Merry">Merry</option>
+    <option value="Rustic">Rustic</option>
+</select>
