--- a/public/heroic-cultures/elf.html
+++ b/public/heroic-cultures/elf.html
@@ -25,3 +25,25 @@
     <option value="axes">Axes</option>
     <option value="spears">Spears</option>
 </select>
+<br>
+<label for="Distinctive Features">Distinctive Features</label> <br>
+<select id="distinctiveFeature1">
+    <option value="Fair">Fair</option>
+    <option value="Keen-eyed">Keen-eyed</option>
+    <option value="Lordly">Lordly</option>
+    <option value="Merry">Merry</option>
+    <option value="Patient">Patient</option>
+    <option value="SUbtle">Subtle</option>
+    <option value="Swift">Swift</option>
+    <option value="Wary">Wary</option>
+</select>
+<br>
+<select id="distinctiveFeature2">
+    <option value="Keen-eyed">Keen-eyed</option>
+    <option value="Lordly">Lordly</option>
+    <option value="Merry">Merry</option>
+    <option value="Patient">Patient</option>
+    <option value="SUbtle">Subtle</option>
+    <option value="Swift">Swift</option>
+    <option value="Wary">Wary</option>
+</select>
