--- a/public/heroic-cultures/ranger.html
+++ b/public/heroic-cultures/ranger.html
@@ -25,3 +25,25 @@
     <option value="axes">Axes</option>
     <option value="bows">Bows</option>
 </select>
+<br>
+<label for="Distinctive Features">Distinctive Features</label> <br>
+<select id="distinctiveFeature1">
+    <option value="Bold">Bold</option>
+    <option value="Honourable">Honourable</option>
+    <option value="Secretive">Secretive</option>
+    <option value="Stern">Stern</option>
+    <option value="Subtle">Subtle</option>
+    <option value="Swift">Swift</option>
+    <option value="Tall">Tall</option>
+    <option value="True-hearted">True-hearted</option>
+</select>
+<br>
+<select id="distinctiveFeature2">
+    <option value="Honourable">Honourable</option>
+    <option value="Secretive">Secretive</option>
+    <option value="Stern">Stern</option>
+    <option value="Subtle">Subtle</option>
+    <option value="Swift">Swift</option>
+    <option value="Tall">Tall</option>
+    <option value="True-hearted">True-hearted</option>
+</select>
