remove labels and replace with span or plain text

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
     <div>
         <form>
-            <label for="charname">Name</label><br>
+            Name<br>
             <input type="text" id="charname" name="charname"><br>
-            <label for="charage">Age</label><br>
+            Age<br>
             <input type="text" id="charage" name="charage"><br>
         </form>
     </div>
     <br>
     <div>
-        <label for="culture">Culture</label> <br>
+        Culture <br>
         <select id="cultureSelection">
             <option value="Barding">Barding</option>
             <option value="Dwarf of Durin's Folk">Dwarf of Durin's Folk</option>
@@ -34,7 +34,7 @@
     </div>
     <br>
     <div>
-        <label for="culture">Calling</label> <br>
+        Calling <br>
         <select id="callingSelection">
             <option value="Captain">Captain</option>
             <option value="Champion">Champion</option>
@@ -52,7 +52,7 @@
     </div>
     <br>
     <div id="rewardbox">
-        <label for="Reward Selection">Starting Reward</label> <br>
+        Starting Reward <br>
         <select id="rewardSelection">
             <option value="Close-fitting">Close-fitting</option>
             <option value="Cunning Make">Cunning Make</option>
@@ -64,7 +64,7 @@
         <br>
     </div>
     <div id="virtuebox">
-        <label for="Virtue Selection">Starting Virtue</label> <br>
+        Starting Virtue <br>
         <select id="virtueSelection">
             <option value="Confidence">Confidence</option>
             <option value="Dour-handed">Dour-handed</option>
@@ -111,75 +111,75 @@
     <h2>Skills</h2>
     <div>
         <input type="checkbox" id="awe-check" disabled>
-        <label id="awe-levelText">Awe: </label>
+        <span id="awe-levelText">Awe: </span>
     </div>
     <div>
         <input type="checkbox" id="athletics-check" disabled>
-        <label id="athletics-levelText">Athletics: </label>
+        <span id="athletics-levelText">Athletics: </span>
     </div>
     <div>
         <input type="checkbox" id="awareness-check" disabled>
-        <label id="awareness-levelText">Awareness: </label>
+        <span id="awareness-levelText">Awareness: </span>
     </div>
     <div>
         <input type="checkbox" id="hunting-check" disabled>
-        <label id="hunting-levelText">Hunting: </label>
+        <span id="hunting-levelText">Hunting: </span>
     </div>
     <div>
         <input type="checkbox" id="song-check" disabled>
-        <label id="song-levelText">Song: </label>
+        <span id="song-levelText">Song: </span>
     </div>
     <div>
         <input type="checkbox" id="craft-check" disabled>
-        <label id="craft-levelText">Craft: </label>
+        <span id="craft-levelText">Craft: </span>
     </div>
     <div>
         <input type="checkbox" id="enhearten-check" disabled>
-        <label id="enhearten-levelText">Enhearten: </label>
+        <span id="enhearten-levelText">Enhearten: </span>
     </div>
     <div>
         <input type="checkbox" id="travel-check" disabled>
-        <label id="travel-levelText">Travel: </label>
+        <span id="travel-levelText">Travel: </span>
     </div>
     <div>
         <input type="checkbox" id="insight-check" disabled>
-        <label id="insight-levelText">Insight: </label>
+        <span id="insight-levelText">Insight: </span>
     </div>
     <div>
         <input type="checkbox" id="healing-check" disabled>
-        <label id="healing-levelText">Healing: </label>
+        <span id="healing-levelText">Healing: </span>
     </div>
     <div>
         <input type="checkbox" id="courtesy-check" disabled>
-        <label id="courtesy-levelText">Courtesy: </label>
+        <span id="courtesy-levelText">Courtesy: </span>
     </div>
     <div>
         <input type="checkbox" id="battle-check" disabled>
-        <label id="battle-levelText">Battle: </label>
+        <span id="battle-levelText">Battle: </span>
     </div>
     <div>
         <input type="checkbox" id="persuade-check" disabled>
-        <label id="persuade-levelText">Persuade: </label>
+        <span id="persuade-levelText">Persuade: </span>
     </div>
     <div>
         <input type="checkbox" id="stealth-check" disabled>
-        <label id="stealth-levelText">Stealth: </label>
+        <span id="stealth-levelText">Stealth: </span>
     </div>
     <div>
         <input type="checkbox" id="scan-check" disabled>
-        <label id="scan-levelText">Scan: </label>
+        <span id="scan-levelText">Scan: </span>
     </div>
     <div>
         <input type="checkbox" id="explore-check" disabled>
-        <label id="explore-levelText">Explore: </label>
+        <span id="explore-levelText">Explore: </span>
     </div>
     <div>
         <input type="checkbox" id="riddle-check" disabled>
-        <label id="riddle-levelText">Riddle: </label>
+        <span id="riddle-levelText">Riddle: </span>
     </div>
     <div>
         <input type="checkbox" id="lore-check" disabled>
-        <label id="lore-levelText">Lore: </label>
+        <span id="lore-levelText">Lore: </span>
     </div>
 
     <h2>Combat</h2>
