--- a/public/gear.html
+++ b/public/gear.html
@@ -1,14 +1,14 @@
-<label for=""><em>War Gear</em></label>
+<em>War Gear</em>
 <br>
 <div id="bowsBox">
-    <label for="Bows Selection">Bows</label> <br>
+    Bows <br>
     <select id="bowsSelection">
         <option value="Bow">Bow</option>
         <option value="Great Bow">Great Bow</option>
     </select>
 </div>
 <div id="swordsBox">
-    <label for="Swords Selection">Swords</label> <br>
+    Swords <br>
     <select id="swordsSelection">
         <option value="Short Sword">Short Sword</option>
         <option value="Sword">Sword</option>
@@ -16,7 +16,7 @@
     </select>
 </div>
 <div id="axesBox">
-    <label for="Axes Selection">Axes</label> <br>
+    Axes <br>
     <select id="axesSelection">
         <option value="Axe">Axe</option>
         <option value="Long-hafted Axe">Long-hafted Axe</option>
@@ -25,7 +25,7 @@
     </select>
 </div>
 <div id="spearsBox">
-    <label for="Spears Selection">Spears</label> <br>
+    Spears <br>
     <select id="spearsSelection">
         <option value="Short Spear">Short Spear</option>
         <option value="Spear">Spear</option>
@@ -33,7 +33,7 @@
     </select>
 </div>
 <br>
-<label for="Armour Selection">Armour</label> <br>
+Armour <br>
 <select id="armourSelection">
     <option value="Leather Shirt">Leather Shirt</option>
     <option value="Leather Corslet">Leather Corslet</option>
@@ -41,10 +41,10 @@
     <option value="Coat of Mail">Coat of Mail</option>
 </select>
 <br>
-<label for="Helm Toggle">Use Helm?</label> <br>
+Use Helm? <br>
 <input type="checkbox" name="usehelm" id="usehelm">
 <br>
-<label for="Shield Selection">Shield</label> <br>
+Shield <br>
 <select id="shieldSelection">
     <option value="Buckler">Buckler</option>
     <option value="Shield">Shield</option>
