--- a/public/heroic-cultures/barding.html
+++ b/public/heroic-cultures/barding.html
@@ -1,4 +1,4 @@
-<label for="Attribute Selection">Attribute Selection</label> <br>
+<span>Attribute Selection</span> <br>
 <select id="attributeSelection">
     <option value="att1">Str: 5, Heart: 7, Wits: 2</option>
     <option value="att2">Str: 4, Heart: 7, Wits: 3</option>
@@ -8,13 +8,13 @@
     <option value="att6">Str: 6, Heart: 6, Wits: 2</option>
 </select>
 <br>
-<label for="Favored Skill">Favored Skill</label> <br>
+<span>Favored Skill</span> <br>
 <select id="favoredSkillSelection">
     <option value="athletics">Athletics</option>
     <option value="enhearten">Enhearten</option>
 </select>
 <br>
-<label for="proficiencies">Proficiencies</label> <br>
+<span>Proficiencies</span> <br>
 <select id="proficiencySelection1">
     <option value="bows">Bows</option>
     <option value="swords">Swords</option>
@@ -24,4 +24,26 @@
     <option value="swords">Swords</option>
     <option value="axes">Axes</option>
     <option value="spears">Spears</option>
+</select>
+<br>
+<span>Distinctive Features</span> <br>
+<select id="distinctiveFeature1">
+    <option value="Bold">Bold</option>
+    <option value="Eager">Eager</option>
+    <option value="Fair">Fair</option>
+    <option value="Fierce">Fierce</option>
+    <option value="Generous">Generous</option>
+    <option value="Proud">Proud</option>
+    <option value="Tall">Tall</option>
+    <option value="Wilful">Wilful</option>
+</select>
+<br>
+<select id="distinctiveFeature2">
+    <option value="Eager">Eager</option>
+    <option value="Fair">Fair</option>
+    <option value="Fierce">Fierce</option>
+    <option value="Generous">Generous</option>
+    <option value="Proud">Proud</option>
+    <option value="Tall">Tall</option>
+    <option value="Wilful">Wilful</option>
 </select>
