--- a/public/heroic-cultures/elf.html
+++ b/public/heroic-cultures/elf.html
@@ -1,4 +1,4 @@
-<label for="Attribute Selection">Attribute Selection</label> <br>
+<span>Attribute Selection</span> <br>
 <select id="attributeSelection">
     <option value="att1">Str: 5, Heart: 2, Wits: 7</option>
     <option value="att2">Str: 4, Heart: 3, Wits: 7</option>
@@ -8,13 +8,13 @@
     <option value="att6">Str: 6, Heart: 2, Wits: 6</option>
 </select>
 <br>
-<label for="Favored Skill">Favored Skill</label> <br>
+<span>Favored Skill</span> <br>
 <select id="favoredSkillSelection">
     <option value="song">Song</option>
     <option value="lore">Lore</option>
 </select>
 <br>
-<label for="proficiencies">Proficiencies</label> <br>
+<span>Proficiencies</span> <br>
 <select id="proficiencySelection1">
     <option value="bows">Bows</option>
     <option value="spears">Spears</option>
@@ -26,14 +26,14 @@
     <option value="spears">Spears</option>
 </select>
 <br>
-<label for="Distinctive Features">Distinctive Features</label> <br>
+<span>Distinctive Features</span> <br>
 <select id="distinctiveFeature1">
     <option value="Fair">Fair</option>
     <option value="Keen-eyed">Keen-eyed</option>
     <option value="Lordly">Lordly</option>
     <option value="Merry">Merry</option>
     <option value="Patient">Patient</option>
-    <option value="SUbtle">Subtle</option>
+    <option value="Subtle">Subtle</option>
     <option value="Swift">Swift</option>
     <option value="Wary">Wary</option>
 </select>
