--- a/public/heroic-cultures/hobbit.html
+++ b/public/heroic-cultures/hobbit.html
@@ -1,4 +1,4 @@
-<label for="Attribute Selection">Attribute Selection</label> <br>
+<span>Attribute Selection</span> <br>
 <select id="attributeSelection">
     <option value="att1">Str: 3, Heart: 6, Wits: 5</option>
     <option value="att2">Str: 3, Heart: 7, Wits: 4</option>
@@ -8,13 +8,13 @@
     <option value="att6">Str: 2, Heart: 6, Wits: 6</option>
 </select>
 <br>
-<label for="Favored Skill">Favored Skill</label> <br>
+<span>Favored Skill</span> <br>
 <select id="favoredSkillSelection">
     <option value="courtesy">Courtesy</option>
     <option value="stealth">Stealth</option>
 </select>
 <br>
-<label for="proficiencies">Proficiencies</label> <br>
+<span>Proficiencies</span> <br>
 <select id="proficiencySelection1">
     <option value="bows">Bows</option>
     <option value="swords">Swords</option>
@@ -26,7 +26,7 @@
     <option value="spears">Spears</option>
 </select>
 <br>
-<label for="Distinctive Features">Distinctive Features</label> <br>
+<span>Distinctive Features</span> <br>
 <select id="distinctiveFeature1">
     <option value="Eager">Eager</option>
     <option value="Fair-spoken">Fair-spoken</option>
