--- a/public/heroic-cultures/dwarf.html
+++ b/public/heroic-cultures/dwarf.html
@@ -1,4 +1,4 @@
-<label for="Attribute Selection">Attribute Selection</label> <br>
+<span>Attribute Selection</span> <br>
 <select id="attributeSelection">
     <option value="att1">Str: 7, Heart: 2, Wits: 5</option>
     <option value="att2">Str: 7, Heart: 3, Wits: 4</option>
@@ -8,13 +8,13 @@
     <option value="att6">Str: 6, Heart: 2, Wits: 6</option>
 </select>
 <br>
-<label for="Favored Skill">Favored Skill</label> <br>
+<span>Favored Skill</span> <br>
 <select id="favoredSkillSelection">
     <option value="craft">Craft</option>
     <option value="riddle">Riddle</option>
 </select>
 <br>
-<label for="proficiencies">Proficiencies</label> <br>
+<span>Proficiencies</span> <br>
 <select id="proficiencySelection1">
     <option value="axes">Axes</option>
     <option value="swords">Swords</option>
@@ -26,7 +26,7 @@
     <option value="spears">Spears</option>
 </select>
 <br>
-<label for="Distinctive Features">Distinctive Features</label> <br>
+<span>Distinctive Features</span> <br>
 <select id="distinctiveFeature1">
     <option value="Cunning">Cunning</option>
     <option value="Fierce">Fierce</option>
