--- a/public/heroic-cultures/ranger.html
+++ b/public/heroic-cultures/ranger.html
@@ -1,4 +1,4 @@
-<label for="Attribute Selection">Attribute Selection</label> <br>
+<span>Attribute Selection</span> <br>
 <select id="attributeSelection">
     <option value="att1">Str: 7, Heart: 5, Wits: 2</option>
     <option value="att2">Str: 7, Heart: 4, Wits: 3</option>
@@ -8,13 +8,13 @@
     <option value="att6">Str: 6, Heart: 6, Wits: 2</option>
 </select>
 <br>
-<label for="Favored Skill">Favored Skill</label> <br>
+<span>Favored Skill</span> <br>
 <select id="favoredSkillSelection">
     <option value="hunting">Hunting</option>
     <option value="lore">Lore</option>
 </select>
 <br>
-<label for="proficiencies">Proficiencies</label> <br>
+<span>Proficiencies</span> <br>
 <select id="proficiencySelection1">
     <option value="spears">Spears</option>
     <option value="swords">Swords</option>
@@ -26,7 +26,7 @@
     <option value="bows">Bows</option>
 </select>
 <br>
-<label for="Distinctive Features">Distinctive Features</label> <br>
+<span>Distinctive Features</span> <br>
 <select id="distinctiveFeature1">
     <option value="Bold">Bold</option>
     <option value="Honourable">Honourable</option>
