fix dwarven favored skills

--- a/public/heroic-cultures/dwarf.html
+++ b/public/heroic-cultures/dwarf.html
@@ -11,7 +11,7 @@
 <span>Favored Skill</span> <br>
 <select id="favoredSkillSelection">
     <option value="craft">Craft</option>
-    <option value="riddle">Riddle</option>
+    <option value="travel">Travel</option>
 </select>
 <br>
 <span>Proficiencies</span> <br>
