add calling favored skills UI and functionality, fix skillpoints bug when changing cultures

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             <option value="Warden">Warden</option>
         </select>
     </div>
+    <span>Calling Favored Skills</span> <br>
+    <div id="callingbox">
+    </div>
     <br>
     <div id="experiencebox">
     </div>
